Adding Computation function for unsigned digits

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,5 +23,7 @@
     ></number-base-input>
     <br />
     <button ion-button full (click)="convert()">Convert</button>
+    <br />
+    <button ion-button block outline color="dark" (click)="goToComputePage()">Calculator</button>
 </ion-list>
 </ion-content>
